--- a/assignment/style.css
+++ b/assignment/style.css
@@ -9,6 +9,12 @@ header {
   text-align: center;
 }
 
+.img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 h3 {
   background-color: #32a852;
   color: white;
